fix responsive spacings & font sizes (#181)

--- a/src/theme/_content.scss
+++ b/src/theme/_content.scss
@@ -168,5 +168,9 @@
     margin-bottom: $spacing-medium;
     color: $black;
     @include body-text();
+
+    @media only screen and (max-width: $largest-mobile-screen) {
+      margin-bottom: $spacing-large;
+    }
   }
 }
