--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -85,14 +85,27 @@ $horizontal-space-small-screens: $spacing-small !default;
 // Vertical Spacing
 $block-vertical-space: 25px !default;
 
+// Change of color
+$color-block-change-vertical-spacing: 80px !default;
+
+// Grids
+$grid-block-vertical-spacing-top: 80px !default;
+$grid-block-vertical-spacing-bottom: 80px !default;
+
 @mixin vertical-space-h1() {
   margin-top: 40px;
   margin-bottom: 80px;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-bottom: 60px;
+  }
 }
 
 @mixin vertical-space-h2() {
   margin-top: 80px;
   margin-bottom: 40px;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-top: 60px;
+  }
 }
 
 @mixin vertical-space-h3() {
@@ -108,11 +121,19 @@ $block-vertical-space: 25px !default;
 @mixin vertical-space-heading() {
   margin-top: 80px;
   margin-bottom: 80px;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }
 
 @mixin vertical-space-introduction() {
   margin-top: 80px;
   margin-bottom: 80px;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }
 
 @mixin vertical-space-button() {
@@ -127,19 +148,36 @@ $block-vertical-space: 25px !default;
 @mixin vertical-space-separator() {
   margin-top: 80px;
   margin-bottom: 80px;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }
 
 @mixin vertical-space-block-title() {
   margin-top: 80px;
   margin-bottom: 80px;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }
 
-// Change of color
-$color-block-change-vertical-spacing: 80px !default;
+@mixin color-block-change-vertical-spacing() {
+  padding-top: $color-block-change-vertical-spacing;
+  padding-bottom: $color-block-change-vertical-spacing;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    padding-top: $spacing-large;
+    padding-bottom: $spacing-large;
+  }
+}
 
-// Grids
-$grid-block-vertical-spacing-top: 80px !default;
-$grid-block-vertical-spacing-bottom: 80px !default;
+@mixin grid-block-vertical-spacing-top() {
+  margin-top: $grid-block-vertical-spacing-top;
+  @media only screen and (max-width: $largest-mobile-screen) {
+    margin-top: $spacing-large;
+  }
+}
 
 // Footer
 $footer-vertical-spacing-top: 80px !default;
